unpackaged/main/default/objects/Campaign/fields/RICSC_AuthorisationGroup__c.field-meta.xml
<CustomField>
        <fullName>RICSC_AuthorisationGroup__c</fullName>
        <description>SAP Authorization Group the campaign is valid for</description>
        <label>Authorisation Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RICSC_SAPAuthorisationGroup</valueSetName>
        </valueSet>
    </CustomField>