unpackaged/main/default/objects/Campaign/fields/RICSC_CommunicationMediumID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_CommunicationMediumID__c</fullName>
        <description>Channel</description>
        <label>Communication Medium ID</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>