unpackaged/main/default/objects/Campaign/fields/RICSC_EmployeeResponsible__c.field-meta.xml
<CustomField>
        <fullName>RICSC_EmployeeResponsible__c</fullName>
        <description>Employee who is responsible for the campaign</description>
        <label>Employee Responsible</label>
        <length>80</length>
        <type>Text</type>
    </CustomField>