unpackaged/main/default/objects/Campaign/fields/RICSC_ExternalID__c.field-meta.xml
<CustomField>
        <fullName>RICSC_ExternalID__c</fullName>
        <description>Id of the Campaign in the external system</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>