unpackaged/main/default/objects/Campaign/fields/RICSC_Objective__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Objective__c</fullName>
        <description>Objective of the Campaign</description>
        <label>Objective</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>