unpackaged/main/default/objects/Campaign/fields/RICSC_PlannedEndDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PlannedEndDate__c</fullName>
        <description>Campaign Planned End Date</description>
        <label>Planned End Date</label>
        <type>Date</type>
    </CustomField>