unpackaged/main/default/objects/Campaign/fields/RICSC_PlannedStartDate__c.field-meta.xml
<CustomField>
        <fullName>RICSC_PlannedStartDate__c</fullName>
        <description>Campaign Planned Start Date</description>
        <label>Planned Start Date</label>
        <type>Date</type>
    </CustomField>