unpackaged/main/default/objects/Campaign/fields/RICSC_RecurringCampaign__c.field-meta.xml
<CustomField>
        <fullName>RICSC_RecurringCampaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if it is a recurrent campaign</description>
        <label>Recurring Campaign</label>
        <type>Checkbox</type>
    </CustomField>