unpackaged/main/default/objects/Campaign/fields/RICSC_SalesOrganization__c.field-meta.xml
<CustomField>
        <fullName>RICSC_SalesOrganization__c</fullName>
        <description>Target Organization</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dummy</fullName>
                </value>
                <value>
                    <fullName>Need</fullName>
                </value>
                <value>
                    <fullName>To</fullName>
                </value>
                <value>
                    <fullName>Changed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>