unpackaged/main/default/objects/Campaign/fields/RICSC_Tactic__c.field-meta.xml
<CustomField>
        <fullName>RICSC_Tactic__c</fullName>
        <description>Tactic of the Campaign</description>
        <label>Tactic</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>