unpackaged/main/default/objects/Campaign/fields/RICSC_TotalCost__c.field-meta.xml
<CustomField>
        <fullName>RICSC_TotalCost__c</fullName>
        <description>Total Cost of the Campaign</description>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>